crates/plotnik-lib/tests/02-parser/recovery_incomplete/field_value_is_garbage.txt
(call name: %%%)
==== diagnostics ====
error: expected an expression
 --> query.ptk:1:13
  |
1 | (call name: %%%)
  |             ^^^
  |
help: an expression is a node `(kind)`, anonymous node `"text"`, sequence `{...}`, or alternation `[...]`
